[package]
name = "ufw-log-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
chrono = "0.4.31"
once_cell = "1.18.0"
regex = "1.10.2"
rusqlite = { version = "0.29.0", features = ["chrono"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full", "process"] }
parking_lot = "0.12.1"
moka = { version = "0.11", features = ["future"] }